--- a/themes/Academia/layout/includes/side-card.pug
+++ b/themes/Academia/layout/includes/side-card.pug
@@ -24,3 +24,7 @@
             a.cv-links(href=url_for(theme.cv_dl.dir) target="_blank")
                 i(class="fas fa-file-pdf" aria-hidden="true")
                     span= theme.cv_dl.description
+        .access-map 
+            <div>
+            <a href=" "  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=povAioHoHERgiQ2sur21ofCG7GaxYZ77WZnOsgjwAII&cl=ffffff"/></a>
+            </div>
